- fixed variant form input fields style so their text is visible

--- a/client/templates/snaxterLayout/snaxterLayout.less
+++ b/client/templates/snaxterLayout/snaxterLayout.less
@@ -1,4 +1,8 @@
 
+/*
+some corrections to make Snaxter Template work with Reaction
+*/
+
 #menu-0 {
   disp__lay: none;
 }
@@ -6,4 +10,21 @@
 .mbr-navbar__container .reaction-navigation-header {
   width: 90%;
   /*padding-top: 10px;*/
+}
+
+div.product-variants .form-control {
+  padding: 6px 12px;
+}
+
+.variant-form {
+  background: #fafafa;
+  border: 0;
+}
+
+.variant-form .form-control {
+  border-width: 1px;
+}
+
+.variant-edit-form {
+  background-color: transparent;
 }
